Sun Jul 27 02:11:21 2003  Tim Janik  <timj@gtk.org>

	* bsemidiicontroller.[hc]: fix midi channel handling.

	* bsemonokeyboard.[hc]: new module. monophonic midi keyboard input
	module with selectable midi channel.

	* bsemidireceiver.[hc]: implemented monophonic synth (keyboard) module.

	* bseproject.c: fix default midi channel.

Sat Jul 26 04:33:03 2003  Tim Janik  <timj@gtk.org>

	* bsemididecoder.c (bse_midi_decoder_construct_event): count
	midi channels starting from 1 for decoded events.

	* bsetrack.[hc]: added midi-channel property to allow custom
	midi channel assignments.

Fri Jul 25 01:05:22 2003  Tim Janik  <timj@gtk.org>

	* bsemididevice-oss.c: push data into a midi decoder.

	* bsemididevice.c: provide default midi decoder (not midi receiver)
	for midi devices.

	* bsemididecoder.[hc]: new files. moved midi event decoding from
	bsemidireceiver.[hc] to here. uses bse_midi_receiver_farm_process_events()
	and bse_midi_receiver_farm_distribute_event() to have the events handled
	by all interested midi receivers.

	* bsemidievent.[hc]: added functions to copy and allocate midi events.

	* bsemidireceiver.[hc]: removed midi event decoding functionality.
	added midi-receiver-farm functions. a global midi event input queue.

	* bseproject.c: add project default decoder to midi receiver farm.

	* bseserver.c: removed default server midi receiver.

Thu Jul 24 01:28:33 2003  Tim Janik  <timj@gtk.org>

	* bsemidievent.[hc]: remove MIDI_MAX_CHANNEL assertions, up this to 99.

	* bsemidireceiver.[hc]: remove MIDI_MAX_CHANNEL assertions.
	add voice module ref counting.
	(bse_midi_receiver_voices_pending): check poending voices for a specific
	midi-channel.

	* bsemidivoice.c: don't export private functions.

	* bseproject.[hc]: provide a single midi-receiver for the whole project.

	* bsetrack.[hc]: don't provide own midi receiver, use the one from our
	song instead. added midi-channel property per track, per default, an