@@ -1,3 +1,11 @@
+Tue Jul 29 13:59:34 2003  Tim Janik  <timj@gtk.org>
+
+	* bsepart.proc: added get-range-controls() to list events
+	wthint a tick-duration range.
+
+	* gsldatahandle-mad.c: fix setup.* fields being 0 during
+	open().
+
 Sun Jul 27 02:11:21 2003  Tim Janik  <timj@gtk.org>
 
 	* bsemidiicontroller.[hc]: fix midi channel handling.
